--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5",
     "@kolking/react-native-rating": "^1.3.4",
     "@react-navigation/bottom-tabs": "^7.0.14",
     "@react-navigation/native": "^7.0.9",
@@ -23,6 +24,7 @@
     "react-i18next": "^15.1.2",
     "react-native": "0.76.3",
     "react-native-easy-grid": "^0.2.2",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.16.3",
     "react-native-responsive-fontsize": "^0.5.1",
