--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5",
+    "@hookform/resolvers": "^3.9.1",
     "@kolking/react-native-rating": "^1.3.4",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/bottom-tabs": "^7.0.14",
     "@react-navigation/native": "^7.0.9",
     "@react-navigation/native-stack": "^7.1.10",
+    "@react-navigation/stack": "^7.1.1",
     "@shopify/restyle": "^2.4.4",
+    "@types/lodash": "^4.17.13",
     "babel-plugin-module-resolver": "^5.0.2",
+    "lodash": "^4.17.21",
     "lottie-react-native": "^7.1.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^15.1.2",
     "react-native": "0.76.3",
     "react-native-easy-grid": "^0.2.2",
@@ -30,7 +37,8 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
-    "react-native-svg": "^15.9.0"
+    "react-native-svg": "^15.9.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
